--- a/index.html
+++ b/index.html
@@ -129,14 +129,11 @@
                                 <p>Conversor de Moedas</p>
                                 <div class="mini-languages">
                                     <img src="assets/mini-languages/java.png" alt="java">
-<!--                                     <img src="assets/mini-languages/html.png" alt="html">
-                                    <img src="assets/mini-languages/javascript.png" alt="javascript">
-                                    <img src="assets/mini-languages/css.png" alt="css"> -->
                                 </div>
                             </div>
                         </div>
                         <div class="description">
-                            <p>Em desenvolvimento...</p>
+                            <p>17 de Julho de 2023</p>
                             <a>Ver mais</a>
                         </div>
                     </div>
