--- a/index.html
+++ b/index.html
@@ -157,27 +157,8 @@
                             <p>15 de Junho de 2023</p>
                             <a>Ver mais</a>
                         </div>
-                    </div>
-<!--                     <div class="box">
-                        <div class="cover">
-                            <img src="assets/projects/youtube.jpg" alt="youtube clone">
-                            <div class="details">
-                                <p>Youtube Clone</p>
-                                <div class="mini-languages">
-                                    <img src="assets/mini-languages/java.png" alt="java">
-                                    <img src="assets/mini-languages/html.png" alt="html">
-                                    <img src="assets/mini-languages/javascript.png" alt="javascript">
-                                    <img src="assets/mini-languages/css.png" alt="css">
-                                </div>
-                            </div>
-                        </div> -->
-<!--                         <div class="description">
-                            <p>23 de Setembro de 2021</p>
-                            <a>Ver mais</a>
-                        </div>
-                    </div> -->
-                    
-                    
+                    </div> 
+
                     </div>
                 </div>
             </div>    
@@ -265,7 +246,7 @@
         </div>
     </div>
     <div class="menuOpen hidden">
-        <h2>Bem-vindo ao meu Portfólio :)</h2>
+        <h2>Bem-vindo ao meu Portfólio</h2>
         <nav>
             <a href="#sobre">Sobre</a>
             <a href="#skills">Habilidades</a>
