Adicionando gifs e imagens dos projetos

--- a/index.html
+++ b/index.html
@@ -106,11 +106,10 @@
                 <div class="cards-projects">
                     <div class="box">
                         <div class="cover">
-                            <img src="assets/projects/encriptador.jpg" alt="dowhile 2021">
+                            <img src="assets/projects/encriptador.jpg" alt="Encriptador">
                             <div class="details">
                                 <p>Encriptador</p>
                                 <div class="mini-languages">
-                                    <img src="assets/mini-languages/java.png" alt="java">
                                     <img src="assets/mini-languages/html.png" alt="html">
                                     <img src="assets/mini-languages/javascript.png" alt="javascript">
                                     <img src="assets/mini-languages/css.png" alt="css">
@@ -143,7 +142,7 @@
                 <div class="cards-projects">
                     <div class="box">
                         <div class="cover">
-                            <img src="assets/projects/sitebarbeariaalura.jpg" alt="Site Barbearia Alura">
+                            <img src="assets/projects/sitebarbearia.jpg" alt="Site Barbearia Alura">
                             <div class="details">
                                 <p>Site Barbearia Alura</p>
                                 <div class="mini-languages">
