Adicionando dados do modal Encriptador

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <p>Conversor de Moedas</p>
                                 <div class="mini-languages">
                                     <img src="assets/mini-languages/java.png" alt="java">
-                                    <img src="assets/mini-languages/spring.png" alt="css">
+                                   <!--  <img src="assets/mini-languages/spring.png" alt="css"> -->
                                 </div>
                             </div>
                         </div>
