Corrigindo bug de visualização do modal

--- a/index.html
+++ b/index.html
@@ -140,8 +140,25 @@
                             <a>Ver mais</a>
                         </div>
                     </div>
+                    <div class="box">
+                        <div class="cover">
+                            <img src="assets/projects/sitebarbearia.jpg" alt="Site Barbearia Alura">
+                            <div class="details">
+                                <p>Site Barbearia Alura</p>
+                                <div class="mini-languages">
+                                    <img src="assets/mini-languages/html.png" alt="html">
+                                    <img src="assets/mini-languages/javascript.png" alt="javascript">
+                                    <img src="assets/mini-languages/css.png" alt="css">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="description">
+                            <p>15 de Junho de 2023</p>
+                            <a>Ver mais</a>
+                        </div>
+                    </div>
 
-            <div class="allprojects">
+            <!-- <div class="allprojects">
                 <h3>Outros projetos</h3>
                 <div class="cards-projects">
                     <div class="box">
@@ -164,7 +181,7 @@
 
                     </div>
                 </div>
-            </div>    
+            </div>     -->
         </div>
     </section>
     <section id="contacts" class="js-section">
