Adicionando novos gifs e atualizando informações dos projetos

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 
                 <p>Mas foi em 2020 que tudo mudou, quando fiz meu primeiro curso de lógica de programação e minha visão sobre minha carreira mudou completamente.</p>
 
-                <p>Neste ano de 2023 iniciei meus estudos de Desenvolvimento Back-end Java pela instituição de ensino Alura + ONE (Oracle Next Education), onde desenvolvi diversos projetos me formei.</p>
+                <p>Neste ano de 2023 iniciei meus estudos de Desenvolvimento Back-end Java pela instituição de ensino Alura + ONE (Oracle Next Education), onde desenvolvi diversos projetos onde me formei.</p>
                 
                 <p>Todos os dias venho buscando uma oportunidade para adquirir mais experiência em programar e colocar em pratica meus conhecimentos.</p>
 
