Adicionando novas linguagens

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
                         <p>Spring</p>
                         <img src="assets/languages/spring.png" alt="spring">
                     </div>
+                    <div class="box">
+                        <p>Python</p>
+                        <img src="assets/languages/python.png" alt="spring">
+                    </div>
                 </div>
             </div>
         </div>
